--- a/assets/kube-apiserver/kube-apiserver-deployment.yaml
+++ b/assets/kube-apiserver/kube-apiserver-deployment.yaml
@@ -106,6 +106,9 @@ spec:
           mountPath: /etc/kubernetes/kms-config/
         - name: kms-socket
           mountPath: /tmp
+        - name: kms-kp
+          mountPath: /tmp/kp
+          readOnly: true
       - name: kms
         image: {{ .KMSImage }}
         imagePullPolicy: IfNotPresent
@@ -147,6 +150,8 @@ spec:
           value: "10"
         - name: KP_DATA_JSON
           value: '{{ .KPInfo }}'
+        - name: KP_WDEK_PATH
+          value: "/tmp/kp/wdek"  
         - name: API_KEY
           value: {{ .KPAPIKey }}
         - name: HEALTHZ_PATH
@@ -183,4 +188,8 @@ spec:
           name: kms-config
       - name: kms-socket
         emptyDir: {}
+      - name: kms-kp
+        secret:
+          secretName: kp-wdek-secret
+          optional: true
 {{ end }}
